--- a/bone-segmentation-landing-page/package.json
+++ b/bone-segmentation-landing-page/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "three": "^0.174.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.174.0"
   }
 }
